--- a/css/styles.css
+++ b/css/styles.css
@@ -61,20 +61,20 @@ ul {
   padding-bottom: 94px;
 }
 
-.btn{
-	display: inline-block;
-	border-radius: 4px;
-	border: transparent;
-	font-size: 16px;
+.btn {
+  display: inline-block;
+  border-radius: 4px;
+  border: transparent;
+  font-size: 16px;
 }
 
-.social{
-	width: 44px;
-	height: 44px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
+.social {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 
 /* !header */
@@ -83,7 +83,7 @@ ul {
 }
 
 .container-nav,
-.main-nav{
+.main-nav {
   display: flex;
   align-items: center;
 }
@@ -145,7 +145,7 @@ ul {
 }
 
 .nav-link:focus,
-.nav-link:hover, 
+.nav-link:hover,
 .contact-link:focus,
 .contact-link:hover {
   color: var(--accent-text-color);
@@ -229,10 +229,14 @@ ul {
 .qualities-item:last-child {
   margin-right: 0;
 }
-.qualities-img{
-	display: flex;
-	background-color: var(--background-box-light);
-	padding: 25px 100px;
+.qualities-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  border-radius: 4px;
+  background-color: var(--background-box-light);
+
 }
 
 .qualities-title {
@@ -256,12 +260,41 @@ ul {
 }
 
 .examples-pict {
+  position: relative;
   width: calc ((100% - 60px) / 3);
   margin-right: var(--margin-cards-thirty);
 }
 
 .examples-pict:last-child {
   margin-right: 0;
+}
+
+.thumb {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 370px;
+  height: 70px;
+}
+
+.thumb::before {
+  position: absolute;
+  content: '';
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.thumb-title {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  margin-top: 27px;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  color: var(--white-text-color);
 }
 
 .section.background {
@@ -341,7 +374,7 @@ ul {
 
 .client-list {
   display: flex;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .client-item + .client-item {
@@ -377,20 +410,20 @@ ul {
   padding-bottom: 60px;
 }
 
-.flex-footer{
-	display: flex;
-	align-items: baseline;
+.flex-footer {
+  display: flex;
+  align-items: baseline;
 }
 
-.address-footer{
-	margin-right: 70px;
+.address-footer {
+  margin-right: 70px;
 }
 .main-address {
-	margin-top: 20px;
- }
+  margin-top: 20px;
+}
 
-.footer-social-list{
-	display: flex;
+.footer-social-list {
+  display: flex;
 }
 
 .logo-light {
@@ -425,36 +458,36 @@ ul {
   color: var(--accent-text-color);
 }
 
-.footer-social-title{
-	margin-bottom: 20px;
-	color: var(--white-text-color);
-	font-size: 14px;
-	line-height: 1.17;
-	text-transform: uppercase;
+.footer-social-title {
+  margin-bottom: 20px;
+  color: var(--white-text-color);
+  font-size: 14px;
+  line-height: 1.17;
+  text-transform: uppercase;
 }
 
 .footer-social-item + .footer-social-item {
-	margin-left: 10px;
+  margin-left: 10px;
 }
 
 .footer-link {
-	background-color: hsla(0, 0%, 100%, .1);
-	color: var(--white-text-color);
+  background-color: hsla(0, 0%, 100%, 0.1);
+  color: var(--white-text-color);
 }
 
 .team-social-icon {
-	fill: currentColor;
+  fill: currentColor;
 }
 
 .footer-link:hover,
-.footer-link:focus{
-	background-color: var(--accent-text-color);
+.footer-link:focus {
+  background-color: var(--accent-text-color);
 }
 
 /* !portfolio main*/
 .btn-list {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
   margin-bottom: 50px;
 }
 
@@ -497,7 +530,8 @@ ul {
   border: 1px solid #eeeeee;
 }
 
-.pictures-li:hover {
+.pictures-link:hover {
+	display: block;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
 }
@@ -517,4 +551,44 @@ ul {
 .text-project {
   font-size: 16px;
   line-height: 1.88;
+  color: var(--main-text-color);
+}
+
+/* !модалка */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 581px;
+  width: 528px;
+  background-color: #ffffff;
+  color: var(--main-text-color);
+}
+
+.button-modal{
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
