--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --background-box-light: #f5f4fa;
   --margin-cards-thirty: 30px;
   --color-icon-main: #afb1b8;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 html {
@@ -107,6 +108,7 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.02em;
 }
+
 .logo {
   color: var(--accent-text-color);
   font-family: 'Raleway', 'sans-serif';
@@ -149,10 +151,23 @@ ul {
 .contact-link:focus,
 .contact-link:hover {
   color: var(--accent-text-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .current {
+	position: relative;
   color: var(--accent-text-color);
+}
+.current::after{
+	position: absolute;
+  content: '';
+  display: block;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-text-color);
 }
 
 /* !Hero index*/
@@ -160,7 +175,7 @@ ul {
   max-width: 1600px;
   height: 600px;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../imeges/offise.jpg);
+  url(../imeges/offise.jpg);
   padding-top: 200px;
   padding-bottom: 200px;
   margin-left: auto;
@@ -199,6 +214,8 @@ ul {
 .btn-main:hover {
   background-color: #188ce8;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms var(--timing-function);
+  transition: box-shadow 250ms var(--timing-function);
 }
 
 /* !main index*/
@@ -236,7 +253,6 @@ ul {
   height: 120px;
   border-radius: 4px;
   background-color: var(--background-box-light);
-
 }
 
 .qualities-title {
@@ -370,6 +386,8 @@ ul {
 .team-link:focus {
   background-color: var(--accent-text-color);
   color: var(--white-text-color);
+  transition: color 250ms var(--timing-function);
+  transition: background-color 250ms var(--timing-function);
 }
 
 .client-list {
@@ -399,8 +417,9 @@ ul {
 
 .client-link:focus,
 .client-link:hover {
-  border: 1px solid var(--accent-text-color);
+  border-color: var(--accent-text-color);
   color: var(--accent-text-color);
+  transition: color 250ms var(--timing-function);
 }
 
 /* !footer */
@@ -456,6 +475,7 @@ ul {
 .address-link:focus,
 .address-link:hover {
   color: var(--accent-text-color);
+  transition: color 250ms var(--timing-function);
 }
 
 .footer-social-title {
@@ -482,6 +502,7 @@ ul {
 .footer-link:hover,
 .footer-link:focus {
   background-color: var(--accent-text-color);
+  transition: background-color 250ms var(--timing-function);
 }
 
 /* !portfolio main*/
@@ -514,6 +535,9 @@ ul {
   color: var(--white-text-color);
   background-color: var(--accent-text-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: color 250ms var(--timing-function);
+  transition: background-color 250ms var(--timing-function);
+  transition: box-shadow 250ms var(--timing-function);
 }
 
 .pictures {
@@ -531,9 +555,10 @@ ul {
 }
 
 .pictures-link:hover {
-	display: block;
+  display: block;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
     0px 1px 1px rgba(0, 0, 0, 0.12);
+	 transition: box-shadow 250ms var(--timing-function);
 }
 
 .pictures-box {
@@ -578,17 +603,20 @@ ul {
   height: 581px;
   width: 528px;
   background-color: #ffffff;
-  color: var(--main-text-color);
 }
 
-.button-modal{
-	position: absolute;
-	top: 8px;
-	right: 8px;
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.button-modal {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50%;
+  border-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--white-text-color);
 }
