--- a/css/styles.css
+++ b/css/styles.css
@@ -575,7 +575,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  text-align: start;
+  text-align: center;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translateY(101%);
   transition: transform 250ms var(--timing-function);
@@ -629,7 +629,7 @@ ul {
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.5);
+  transform: translate(-50%, -50%) scale(1.5) rotate(360deg);
 }
 
 .modal {
@@ -637,8 +637,8 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  height: 581px;
-  width: 528px;
+  min-height: 581px;
+  min-width: 528px;
   background-color: #ffffff;
   transition: transform 250ms var(--timing-function), visibility 250ms var(--timing-function);
 }
